Finalized neighborhood and spelling

--- a/apartment/apartment.html
+++ b/apartment/apartment.html
@@ -42,17 +42,6 @@
           <li class="nav-item">
             <a class="nav-link" href="../contacts/contacts.html">Contacts</a>
           </li>  
-          
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Critter Selector
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Dogs</a>
-              <a class="dropdown-item" href="#">Kitties</a>
-              <a class="dropdown-item" href="#">Fish</a>
-            </div>
-          </li>
         </ul>
       </div>
     </nav> 
@@ -63,6 +52,149 @@
           <p class="lead">Mi Casa, Su Casa</p>
         </div>
 
+        <div class="container">
+            <div class="accordion" id="apartment">
+
+              <div class="card">
+                <div class="card-header" id="wifi">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Home Wi-Fi
+                    </button>
+                  </h2>
+                </div>
+
+                <div id="collapseOne" class="collapse" aria-labelledby="wifi" data-parent="#apartment">
+                  <div class="card-body">
+                    <ul>
+                        <li><strong>Username:</strong> KittyCastle</li>
+                        <li><strong>Password:</strong> newyorknewyork</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header" id="entertainment">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                      Entertainment
+                    </button>
+                  </h2>
+                </div>
+
+                <div id="collapseTwo" class="collapse" aria-labelledby="wifi" data-parent="#entertainment">
+                  <div class="card-body">
+                    <ul>
+                        <li>Netflix, Hulu and Amazon Prime all on TV</li><br> 
+                        <li>Use remote to access the apps</li>
+                            <ul>
+                                <li>Netflix and Hulu buttons on the actual remote</li>
+                                <li>Press the ‘house’ button to get the main menu for all app</li>
+                            </ul>
+                            <br>
+
+                        <li>PLEASE shut off the TV when done and don’t leave on the fireworks screensaver</li><br> 
+                        <li>Please don’t attempt to clean the TV for any reason. If you must, use a fiber cloth (lightly dampened if needed). Otherwise no other materials or liquids should touch the TV :)</li>
+                    </ul>
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header" id="trash">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                      Trash, Recycling and Cleanups 
+                    </button>
+                  </h2>
+                </div>
+
+                <div id="collapseThree" class="collapse" aria-labelledby="wifi" data-parent="#trash">
+                  <div class="card-body">
+                    <h5>Trash & Recycling</h5><br>
+                    <ul>
+                        <li>Trash under the sink (extra bags under sink as well)</li><br>
+                        <li>Recycling in the hallway closet - gray trash bin (extra bags in the bottom of the bin)</li><br>
+                        <li>If either of the bins fill up during your stay, you can throw away in the trash room on the floor. It’s located just past the elevator</li><br>
+                    </ul>
+
+                    <h5>Cleanups</h5><br>
+                        <ul>
+                            <li>All cleaning supplies under the kitchen sink</li>
+                            <li>Extra paper towels in the hallway closet</li>
+                        </ul>
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header" id="laundry">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                      Laundry 
+                    </button>
+                  </h2>
+                </div>
+
+                <div id="collapseFour" class="collapse" aria-labelledby="wifi" data-parent="#laundry">
+                  <div class="card-body">
+                    <ul>
+                        <li>If you need to do some laundry, there are washers and dryers on the main floor of the building (to the right when you exit the elevator on the ground floor)</li><br>
+                        <li>You need to use the prepaid laundry card -  located on the very top of fridge with a magnet. There’s money on the card to do a few loads if needed</li><br>
+                        <li>Our detergent and dryer sheets are located in the laundry room, on the shelf below the window all the way to the left. It’s the ECOS brand</li><br>
+                        <li>We use ikea bags to transfer the laundry back and forth. They can be found on the left of the top shelf in the hallway closet</li><br>
+                    </ul>
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header" id="acAndWindows">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+                      AC and Windows
+                    </button>
+                  </h2>
+                </div>
+
+                <div id="collapseFive" class="collapse" aria-labelledby="wifi" data-parent="#acAndWindows">
+                  <div class="card-body">
+                    <ul>
+                        <li>Ok to run the AC on 71-73 while at the apartment</li><br>
+                        <li>Raise up to 73 when leaving for the day</li><br>
+                        <li>Keep all three units running and keep middle bedroom open at all times</li><br>
+                        <li>Feel free to keep the windows open and AC off when home, but ONLY open so the top of the window opens (not the side option). We don’t want curious kitties near the screen</li><br>
+                            <ul>
+                                <li>To open the window, turn the handle 180-degrees to open the top part of the window. If you only turn the handle 90 degrees it opens from the side</li><br>
+                            </ul>      
+                    </ul>
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header" id="guests">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
+                      Guests
+                    </button>
+                  </h2>
+                </div>
+
+                <div id="collapseSix" class="collapse" aria-labelledby="wifi" data-parent="#guests">
+                  <div class="card-body">
+                    <p>We ask that you do not bring over any friends, family or significant others. We trust you with our animals and want to keep the amount of new people being introduced to them in our home to a minimum. If for whatever reason an exception needs to be made please give us a call.</p>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+        </div>
 
 
 
