--- a/neighborhood/neighborhood.html
+++ b/neighborhood/neighborhood.html
@@ -42,17 +42,6 @@
           <li class="nav-item">
             <a class="nav-link" href="../contacts/contacts.html">Contacts</a>
           </li>  
-          
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Critter Selector
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Dogs</a>
-              <a class="dropdown-item" href="#">Kitties</a>
-              <a class="dropdown-item" href="#">Fish</a>
-            </div>
-          </li>
         </ul>
       </div>
     </nav> 
@@ -63,6 +52,39 @@
           <p class="lead">Red Hood. The last Gem.</p>
         </div>
 
+        <div class="container">
+            <h5>Restaurants</h5>
+            <ul>
+                <li>Various options down van brunt (some favorites):</li>
+                    <ul>
+                        <li>Hometown BBQ is amazing</li>
+                        <li>The Good Fork</li>
+                        <li>Copper Pot</li>
+                        <li>Court Street Grocers (sandwhiches)</li>
+                        <li>Ample Hills Ice Cream</li>
+                    </ul>
+            </ul>
+            <br>
+            <h5>Transportation</h5>
+                <ul>
+                   <li>B61 Bus to downtown brooklyn</li>
+                    <ul>
+                        <li><a href="https://apps.apple.com/us/app/mta-bus-time/id991384615">Download</a> MTA app for real-time arrival times</li>
+                    </ul>
+                   <li>You can catch the 4-5, F, A, R and 2-3 trains - they all run from downtown brooklyn</li> 
+                   <li>CitiBike</li>
+                   <li>Revel Scooters </li>  
+                </ul>
+                <br>
+            <h5>Cafe Options</h5>
+                <ul>
+                    <li>Black Flamingo</li>
+                    <li>Baked</li>
+                    <li>Super secret is the cafe in the back of Fairway with great views of the water - go first thing in the morning for some peace and quiet</li>
+                </ul>
+
+        </div>
+
 
 
 
@@ -70,16 +92,6 @@
         <div id="fontCredit">Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </div>
 
-
-
-
-
-
-<!--     <div class="container">
-        <div class="jumbotron jumbotronHeaderImg">
-            <h1>Cervoni Critters</h1>
-        </div>
-    </div> -->
 
 
     <!-- Optional JavaScript -->
