--- a/index.html
+++ b/index.html
@@ -43,17 +43,6 @@
           <li class="nav-item">
             <a class="nav-link" href="contacts/contacts.html">Contacts</a>
           </li>  
-          
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Critter Selector
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="critters/critters.html">Pups</a>
-              <a class="dropdown-item" href="#">Kitties</a>
-              <a class="dropdown-item" href="#">Fish</a>
-            </div>
-          </li>
         </ul>
       </div>
     </nav>  
@@ -61,8 +50,8 @@
     
         <div class="jumbotron homeJumbo jumbotron-fluid">
           <div class="container">
-              <h1 class="display-5">Cervoni Critters</h1>
-              <p class="lead">Welcome our home and thank you for taking care of our dear critters</p>
+              <h1 class="display-5"><i class="fas fa-paw"></i>  Cervoni Critters</h1>
+              <p class="lead">Welcome to our home and thank you for taking care of our dear critters</p>
           </div>
         </div>
 
