Added critter images

--- a/critters/critters.html
+++ b/critters/critters.html
@@ -46,10 +46,120 @@
       </div>
     </nav> 
 
-        <div class="jumbotron critterJumbo">
+<!--         <div class="jumbotron critterJumbo">
           <h1 class="display-5">The Critters</h1>
           <p class="lead">The Gang: Sammy, Toodles, Babs, Penny, Bruce and Hans</p>
+        </div> -->
+
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+
+            <div class="carousel-item active">
+              <img src="../images/sammy3.jpg" class="d-block w-100" alt="sammy">
+              <div class="carousel-caption d-block">
+                <h5 class="critterImageName">Sammy</h5>
+                <p class="critterImageNameSub">The Court Jester</p>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <img src="../images/bruce2.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-block">
+                <h5 class="critterImageName">Bruce</h5>
+                <p class="critterImageNameSub">The Caboose</p>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <img src="../images/babs2.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-block">
+                <h5 class="critterImageName">Babs</h5>
+                <p class="critterImageNameSub">The Queen Bee</p>
+              </div>
+            </div>
+          
+
+            <div class="carousel-item">
+              <img src="../images/penny2.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-block">
+                <h5 class="critterImageName">Penny</h5>
+                <p class="critterImageNameSub">The Princess</p>
+              </div>
+            </div>
+        
+
+            <div class="carousel-item">
+              <img src="../images/hans2.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-block">
+                <h5 class="critterImageName">Hans</h5>
+                <p class="critterImageNameSub">The Observer</p>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <img src="../images/toodles.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-block">
+                <h5 class="critterImageName">Toodles</h5>
+                <p class="critterImageNameSub">The Philosopher</p>
+              </div>
+            </div>
+
+          </div>
+
+
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
+
+
+<!-- wiht caption -->
+<!--         <div class="bd-example">
+          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../images/sammy.jpg" class="d-block w-100" alt="sammy">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Sammy</h5>
+                  <p>The Court Jester</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="../images/babs.jpg" class="d-block w-100" alt="babs">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Babs</h5>
+                  <p>The Queen Bee</p>
+                </div>
+
+              </div>
+              <div class="carousel-item">
+                <img src="../images/bruce.jpg" class="d-block w-100" alt="penny">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Penny</h5>
+                  <p>The Princess Pup</p>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div> -->
 
 
         <!-- collapsable cards witin a Pill navigation  -->
