--- a/apartment/apartment.html
+++ b/apartment/apartment.html
@@ -124,6 +124,8 @@
                         <ul>
                             <li>All cleaning supplies under the kitchen sink</li>
                             <li>Extra paper towels in the hallway closet</li>
+                            <li>Only use the carpet cleaner for stains on the carpet</li>
+                            <li>Use the special pet cleanup spray for all hardwood spills</li>
                         </ul>
 
                   </div>
@@ -166,7 +168,7 @@
                     <ul>
                         <li>Ok to run the AC on 71-73 while at the apartment</li><br>
                         <li>Raise up to 73 when leaving for the day</li><br>
-                        <li>Keep all three units running and keep middle bedroom open at all times</li><br>
+                        <li>Keep the middle room AC off at all times - and keep the door closed at all times</li><br>
                         <li>Feel free to keep the windows open and AC off when home, but ONLY open so the top of the window opens (not the side option). We don’t want curious kitties near the screen</li><br>
                             <ul>
                                 <li>To open the window, turn the handle 180-degrees to open the top part of the window. If you only turn the handle 90 degrees it opens from the side</li><br>
