--- a/critters/critters.html
+++ b/critters/critters.html
@@ -242,6 +242,9 @@
                                                     <ul>
                                                         <li>Add a little cold water, mix and sit for a minute</li><br>
                                                         <li>Still no dice? Add some peanut butter</li><br>
+                                                            <ul>
+                                                                <li>Doggy PB is on the top shelf of the fridge</li>
+                                                            </ul>
                                                         <li>Nothing? Place in the fridge until next feeding</li><br>
                                                         <li><em>Note: </em> It's ok if Penny skips a single meal. If she's skipping two or more - give us a shout. If we can't be reached, schedule a vet visit (<a href="../contacts/contacts.html">contact page</a>)
                                                     </ul>
@@ -256,6 +259,7 @@
                                                 <li>Place the bowl in the crate</li><br>
                                                 <li>Remove bowl as soon as he's done eating</li><br>
                                                 <li>Keep him in crate until Penny has finished eating</li><br>
+                                                <li>REMOVE the bowl after he is done. Don't leave it while you leave for the day. He will chew and eat pieces</li><br>
 
                                             </ul>
                                     </ul>
@@ -265,7 +269,7 @@
                              <ul>
                                  <li class="listHeader">Treat Storage</li>
                                      <ul>
-                                         <li><em>Everyday treats</em> in glass jar on kitchen dolly </li>
+                                         <li><em>Everyday treats</em> in glass jar on kitchen dolly (may not always be in stock)</li>
                                          <ul>
                                              <li>2-3 per day</li>
                                          </ul>
@@ -392,6 +396,10 @@
                                 <ul>
                                     <li>Make sure you have the keys!</li>
                                     <li>Put <span class="petName">Bruce</span> in his create - latch it</li>
+                                        <ul>
+                                            <li>BE SURE to check the door is fully closed and the top handle piece is on the outside keeping the gate from pushing up</li>
+                                            <li>BRUCE HAS ESCAPED BEFORE!</li>
+                                        </ul>
                                     <li><span class="petName">Penny</span> is fine on her own in the apt</li>
                                     <li>Be sure water bowl is full</li>
                                     <li>Make sure AC is on, but you can raise the temp to 73</li>
